Version 1.7.9
- BUG: Issue #394: crash when refreshing
       status list control. (Stefan)

Version 1.7.8
- BUG: Issue #297: "Show changes as unified diff"
       from Log window fails. (Stefan)
- BUG: Issue #299: crash in repobrowser
       when refreshing. (Stefan)
- BUG: Issue #301: Crash in log dialog when
       selecting all revisions with Ctrl-A. (Stefan)
- BUG: issue #302: segfault in status cache. (Stefan)
- BUG: Issue #304: buffer overflow when
       saving column data. (Stefan)
- BUG: Issue #305: diff from log for
       url fails. (Stefan)
- BUG: Issue #298: crash when editing files
       in repo browser. (Stefan)
- BUG: Issue #307: Repository browser does not
       check empty selections. (Stefan)
- BUG: Issue #308: closing merge wizard with
       log dialog open segfaults. (Stefan)
- BUG: Issue #309: file diff dialog
       can segfault. (Stefan)
- BUG: Issue #315: long paths handled
       incorrectly. (Stefan)
- BUG: Issue #316: Threads not correctly synchronized
       in repo browser. (Stefan)
- BUG: Issue #317: progress dlg can't be closed
       with the red X button. (Stefan)
- BUG: Issue #318: Command URLs with spaces parsed
       incorrectly. (Stefan)
- BUG: Issue #320: segfault when unloading the
       shell extension. (Stefan)
- BUG: Issue #321: TortoiseMerge asserts
       on start. (Stefan)
- BUG: Issue #324: Exception when checking for
       admin dirs. (Stefan)
- BUG: Issue #327: Access violation with
       "Show log" on copied entry. (Stefan)
- BUG: Issue #330: crash with invalid
       config file. (Stefan)
- BUG: Issue #332: crash when closing
       log dialog. (Stefan)
- BUG: Issue #335: stack overflow when unchecking
       items in the commit dialog. (Stefan)
- BUG: Issue #336: crash when closing the progress
       dialog too early. (Stefan)
- BUG: Issue #337: out of memory exception when
       opening large files in TortoiseMerge. (Stefan)
- BUG: Issue #338: cache crash on startup. (Stefan)