@@ -1,6 +1,8 @@
 Version 1.7.9
 - BUG: Issue #394: crash when refreshing
        status list control. (Stefan)
+- BUG: Issue #396: crashes in various commands if the
+       config file is invalid. (Stefan)
 
 Version 1.7.8
 - BUG: Issue #297: "Show changes as unified diff"
